<resources>
    <string name="app_name">捷牛汽配网</string>
    <string name="net_fail">网络请求失败，请您检查网络连接</string>
    <string name="home">首页</string>
    <string name="qipeishang">汽配商</string>
    <string name="jijian">快速寄件</string>
    <string name="luntan">维配论坛</string>
    <string name="mine">个人</string>
    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="pwd_again_hint">请确认密码</string>
    <string name="invite_code">请输入邀请码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="orther_login">使用其他登录方式</string>
    <string name="agreement1">登录代表你已同意</string>
    <string name="agreement2">《捷牛隐私协议》</string>
    <string name="tab1">1.输入手机号</string>
    <string name="tab2">2.输入验证码</string>
    <string name="tab3">3.设置密码</string>
    <string name="register_notice">我已阅读并同意《隐私政策》、《法律声明》、《捷牛用户协议》，接受免除或限制责任、诉讼管辖约定等粗体提示条款</string>
    <string name="tab1_btn">同意并注册</string>
    <string name="tab2_btn">下一步</string>
    <string name="code">获取验证码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="commit">提交</string>
    <string name="pwd_notice">密码为6-15位字母加数字组成</string>
    <string name="text_lijishiyong">立即\n使用</string>
    <string name="text_ticket">优惠券\n满30可用</string>

    <!--注册提示-->
    <string name="phone_empty_notice">手机号不能为空</string>
    <string name="phone_error_notice">手机号格式不对</string>
    <string name="code_empty_notice">验证码不能为空</string>
    <string name="pwd_empty_notice">密码不能为空</string>
    <string name="pwd_error_notice">两次输入的密码不一致</string>

    <string name="home_tab_1">捷牛快修</string>
    <string name="home_tab_2">极速询价</string>
    <string name="home_tab_3">询价单</string>
    <string name="home_tab_4">我要报价</string>
    <string name="search_hint">请输入运单号查询快件信息</string>
    <!--我的-->
    <string name="score">积分</string>
    <string name="ticket">优惠券</string>
    <string name="moren">默\n认</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="setting_tab1">设置登录账号</string>
    <string name="setting_tab2">更改用户名</string>
    <string name="setting_tab3">修改密码</string>
    <string name="setting_tab4">通用设置</string>
    <string name="setting_tab5">意见反馈</string>
    <string name="setting_tab6">关于捷牛</string>
    <string name="setting_tab7">检查新版本</string>
    <string name="sure">确定</string>
    <string name="score_notice">每支付1元累计1积分，每满100积分可兑换一张减5元的优惠券。</string>
    <string name="ticket_notice">每100积分可兑换一张减5元的优惠券。</string>
    <string name="fapiao">开票须知：（本公司提供的是增值税普通发票，请认真填写开票信息以免开错，提交开票信息后我司会再3个工作日内审核开票金额后我司以线下配送方式将发票送到你处请注意查收财务处联系电话：15384642801）</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
    <!--汽修商-->
    <string name="qixiushang_context">公司秉承“顾客至上，锐意进取”的经营理念，坚持“客户第一”的原则为广大客户提供优质的服务。欢迎惠顾！</string>
    <!--月卡-->
    <string name="card">1.月卡用户享受当月免运费服务；\n2.月卡用户当月免运费件数不计；\n3.月卡有限日期为一月。\n4.月卡办理方式仅在当前页面办理，无其他途径。办理即生效，解释权归捷牛所有。</string>
    <!--关于捷牛-->
    <string name="about_context">捷牛速运移动客户端是基于Android操作系统开发的个人快件管理，向客户提供自助下单，查件，订单管理，汽配商，服务商网点查询等一站式掌上快捷服务。\n功能简介：\n·下单寄件：自动保存寄件人和收件人地址，常用地址寄件，一键选择。\n·快递员照片推送：寄件收件更安心。\n·电子运单：快递员收件时主动打印电子运单，告别手写运单。\n·网点查询：查询及关注，还可地图导航。\n·查件：扫描运单条码或输入运单号进行查询。\n更多功能期待您的发现使用。</string>
    <string name="yinsi">尊重及保护会员隐私是捷牛物流的一项基本政策，会员同意捷牛物流收集、使用、存储和分享信息，按以下条款所列明的用途，使用会员的资料、信息。\n1、收集的信息包括但不限于以下内容：\n（1）您向我们提供的信息。\n当您在使用捷牛物流网站提供的相关服务时填写及/或提交的信息，包括但不限于国家立法机关和邮政部门发布的有关物流法律法规、部门规章等规范文件规定的内容：如：您的姓名、电话号码、地址、包裹信息（如物品名称、物品价值等）、寄/收件信息（如寄/收件人姓名、电话号码、地址等）、登录账号及相关附加信息（如您所在的省份和城市、邮政编码等）。\n（2）在您使用服务过程中收集的信息。\n为了实现捷牛物流为客户最务用心成就你我的理念，我们会收集您使用服务的相关信息，这类信息包括：\n① 在您使用捷牛物流网站服务，或访问捷牛网站网页时，捷牛物流自动接收井记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间软硬件特征信息及您需求的网页记录等数据；如您下载或使用捷牛物流或其关联公司客户端软件或访问移动网页使用捷牛网站服务时捷牛可能会读取与您位置和移动设备相关的信息，包括但不限于设备型号、设备识别码、操作系统、分辨率、电信运营商等。\n② 除上述信息外，我们还可能为了提供服务及改进服务质量的合理需要而收集您的其他信息，包括您与我们的客户服务团队联系时您提供的相关信息您参与问卷调查时向我们发送的卷答复信息，以及您与捷牛物流的关联方、捷牛合作伙伴之间互动时我们收集的相关信息。与此同时，为提高您使用捷牛网站提供的服务的安全性，更准确地预防钓鱼网站诈和木马病毒我们可能会通过了解一些您的网络使用习惯、您常用的软件信息等手段来判断您账户的风险，井可能会记录一些我们认为有风险的URL。
        \n（3）来自第三方的信息。\n为了给您提供快速、安全、准确、周到的服务，或共同同为您提供服务，或为了预防互联网欺诈的目的捷牛的关联方、合作伙伴会依据法律的规定或与您的约定或征得同意的前提下向捷牛分享的个人信息。\n2、"我的捷牛"如何使用信息\n因收集您的信息是为了向您提供服务及提升服务质量的目的，为了实现这一目的，我们会把您的信息用于下列用途：\n（1）向您提供您使用的各项服务，并维护、改进这些服务；\n（2）向您推荐您可能感兴趣的内容，包括但不限于向您发出产品和服务信息，或通过系统向您展示个性化的第三方推广信息，或者在征得您同意的情况下与捷牛的合作伙伴共享信息以便他们向您发送有关其产品和服务的信息；\n（3）我们可能使用您的个人信息以预防、发现、调查欺诈、危害安全、非法或违反与我们或其关联方协议、正常或规则的行为，以保护您、其他我们的用户，或我们或关联方的合法权益；\n（4）经您许可的其他用途；\n3、"我的捷牛"保证不会在未经会员同意授权的情况下公开、编辑及透漏会员的个人信息，但下列情况除外：\n（1）获得会员的明确授权；\n（2）根据有关的法律法规或相关政府主管部门的要求；\n（3）向捷牛物流关联方分享您的个人信息；\n（4）向可信赖的合作伙伴提供您的个人信息，让他们根据我们的指示并遵循我们的隐私权政策以及其他任何相应的保密和安全措施来为我们处理这些信息；\n（5）只有共享您的信息，才能是供您需要的服务，或处理您与他人的纠纷或争议。例如您在捷牛网站上委托代收点进行代收件服务如代收点履行或部分履行了代收义务并提出信息披露请求的，捷牛物流会视情況向该代售点提供其寄／收件人的联络方式等必要信息，以促成代收件服务的完成或纠纷的解決；\n（6）为维护社会公众的利益；\n（7）为维护捷牛物流的合法权益；\n（8）如您出现违反中国有关法律、法规或者捷牛物流相关协议或相关规则的情况，需要向第三方披露。
    \n4、 Cookie和网络 Beacon\n为使您获得更轻松的访问体验，您访问捷牛物流网站相关网站或使用捷牛网站提供的服务时，我们可能会通过小型数据文件识别您的身份这么做是帮您省去重复输入账户信息的步骤，或者帮助判断您的账户安全。这些数据文件可能是 Cookie， Flash Cookie，或您的浏览器或关联应用程序提供的其他本地存储（统称＂ Cookie＂）。\n请您理解，我们的某些服务只能通过使用＂Cookie＂才可得到实现。如果您的浏览器或浏览器附加服务允许，您可以修改对 Cookie的接受程度或者拒绝捷牛的 Cookie，但这一举动在某些情况下可能会影响您安全访问捷牛网站和使用捷牛网站提供的服务。\n网页上常会包含一些电子图象（称为“单像素”GIF文件或＂网络 beacon＂），使用网络beacon可以帮助网站计算浏览网页的用户或访问某些 cookie，我们会通过网络 beacon收集您浏览网页活动的信息，例如您访问的页面地址、您先前访问的援引页面的位址、您停留在页面的时间、您的浏览环境以及显示设定等。\n5、用户名和密码\n当用户注册成为"我的捷牛"的会员并设置密码后，用户能通过密码来使用会员账号，如果泄漏了密码，则可能会丢失用户的个人识别信息，并且有可能导致对用户不利的司法行为。因此不管任何原因使密码安全受到危及，用户应该立即与"我的捷牛"取得联系。\n6、修改会员资料\n在成功注册为会员，并设置相应密码后，用户可以登录"我的捷牛"网站更新个人信息。\n7、下单资料\n当会员在"我的捷牛"下单时，需要会员提供真实、准确、完整的资料如寄送地址、托寄物资料、联系人、联系电话、付款方式等信息，可以让本网站能处理运单以及运单状态。\n8、会员电子邮件/短信\（1）"我的捷牛"保留通过电子邮件、手机短信、邮寄宣传册等形式，对本网站注册会员发送信息、活动等告知服务的权利。如果用户在"我的捷牛"注册，表明用户已默示同意接受此项服务。
    \n（2）如果会员不想收到相关的通讯，可以向"我的捷牛"提出退阅申请，并注明E-mail地址、手机号或相关地址信息，"我的捷牛"会在收到申请后为会员办理退阅。\n9、下单行为\n"我的捷牛"跟踪IP地址仅仅只是为了安全的必要。如果没有发现任何安全问题，将及时删除本网站收集到的IP地址。网站会跟踪全天的页面访问数据。全天页面访问数据被用来反映网站的流量，"我的捷牛"可以为未来的发展制定计划（例如，增加服务器）。\n10、第三方\n"我的捷牛"不会向任何第三方提供、出售、出租、分享和交易会员的个人信息，除非第三方和"我的捷牛"一起为网站和用户提供服务并且在该服务结束后会将被禁止访问包括其以前能够访问的所有这些资料。当"我的捷牛"被法律强制或依照政府要求提供会员的信息时本网站将善意地披露会员的资料。\n11、信息的存储和交换\n会员信息和资料被收集和存储在放置于中国的服务器上。只有为了做备份的需要时，"我的捷牛"才可能需要将会员的资料传送到别国的服务器上。\n12、外部链接\n当会员点选其他网站链接或广告时，会进入第三者的网站，"我的捷牛"对那些网站的隐私保护措施不负任何责任。\n13、安全\n我们仅在所必需的期间和法律法规要求的时限内保留您的个人信息。\n我们使用各种安全技术和程序，以防信息的丢失、不当使用、未经授权阋览或披露。这些安全措施包括向其它服务器备份数据和对会员密码加密。例如，在某些服务中，我们们将利用加密技术（例如SSL）来保护您提供的个人信息。但请您理解，在因特网上不存在"完善的安全措施"，由于技术的限制以及可能存在的各种恶意手段，即便竭尽所能加强安全措施，也不可能始终保证信息百分之百的安全。您需要了解，您接入我们的服务所用的系统和通讯网络，有可能因我们可控范围外的因素而出现问题。"我的捷牛"保留在任何时间拒绝履行任何有疑问或被怀疑有信用欺诈嫌疑的下单。
    \n14、未成年人使用\n我们不会在知情的情况下收集未成年人的个人信息，也不建议未成年人使用我们的服务。除非所在地法律允许并月临护人同意，未成年人请不要注册账户或发送自己的姓名、住址、电话、邮件地址等个人信息给我们。如果我们不小心收集到了未成年人的信息，我们在知情后会尽快删除。如果您认为我们可能不当地持有来自于或关于未成年人的信息，请联系我们。\n15、隐私免责\n为给您提供便利和更多信息，捷牛的网站和应用可能会包含非捷牛站点的链接。此类网站直接收集的信息受其自身的隐私政策保护护。捷牛还可能通过第三方平台（如应用商店供应商）或其他第三方渠道向您提供服务。对任何通过非捷牛站点与渠道收集信息的隐私保护，捷牛不承担责任第三方应用、工具和插件（如微博、QQ、微信、支付宝等第三方登录服务）直接收集的信息将受第三方服务供应商隐私政策的保护，捷牛对此不承担任何责任。\n同时您了解并同意，以下信息不适用本隐私权政策：\n（1）您在使用捷牛网站提供的搜索服务时输入的关键字信息；\n（2）信用评价、违反法律规定或违反捷牛规则行为及捷牛已对您采取的措施；\n（3）应法律法规要求需公示的企业名称等相关工商注册信息以及自然人经营者的信息。</string>
    <string name="fuwu">捷牛速运是“捷牛物流科技有限公司”品牌及有关商标的合法持有人。提供物流服务的单位已获得“捷牛物流科技有限公司”品牌和商标的使用许可，与寄件人间建立“捷牛速运”物流服务法律关系。依《合同法》、《邮政法》等法律法规，寄件人和快递服务单位特约定如下条款：\n一、寄件人权利和义务：自愿选择交寄快件是否保价、自主选择快件的价值、获得与自主选择所对应的赔偿；享有物流服务单位安全、及时的服务；确保快件不属于国家禁寄、限寄范围，并进行妥善包装；诚实告知快件的状况；并出示有效证件；经物流服务单位同意选择服务费支付方式。\n二、物流服务单位的权利和义务：依法收寄物件，并根据约定提供安全、及时的物流服务；查验寄件人的身份证明；对快件当场验视；对禁寄及拒绝验视的物件不予收寄；向寄件人提供自交寄之日起半年内的查询服务。\n三、保价条款：寄件人可根据快件的重要性、易损性或贵重与否等，自主选择保价或不保价物流服务品种。\n寄件人特别声明：保价物件的实际价值不超过人民币五千元。\n选择保价服务品种的，保价费按所保价额的2%到4%计收。若快件毁损灭失的，由物流服务单位在约定保价价值内按实际损失赔偿；若赔偿不足保价价值的，可按比例退还保价费。超过寄件人声明价值的双方应另行签订书面合同。\n四、非保价条款：寄件人未进行保价服务，物品如果丢失或者损坏时物流服务公司按照物件运费的7倍内赔偿。\n五、寄件人选择、确认、声明、保价的物件价值不仅指快件的本身价值，赔付时且不包括并不限于快件存在或可能存在的任何直、间接利益或特殊商业利益等。有赔偿的快件，快递服务单位应免除或退还该快件的服务费。\n六、送达时间和方式依“捷牛物流科技有限公司”官网（www.jieniuwuliu.com）公示的服务标准执行。收件人接受快件或签收的，则快递服务单位已完成交付义务，若有异议的应即时提出并在签收单上予以表明。
        \n七、寄件人选择服务费由收件人支付的，为寄、收件人间的约定。收件人支付服务费后，在寄件人与快递服务单位约定的范围内享受与寄件人同等的权利；若收件人拒绝付费的，则由快递服务单位将快件退回寄件人，寄件人应承担寄、运费及保价费。\n八、本合同自寄件人在订单平台上填写名址或快件实际交付时生效。\n注：保价条款以收取保价费用时生效。</string>
</resources>
