<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/line_gray"
        android:layout_above="@id/bottom"
        />

    <RadioGroup
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <RadioButton
            android:id="@+id/home"
            style="@style/main_radio"
            android:textColor="@drawable/menu_sel"
            android:drawableTop="@drawable/home_selector"
            android:checked="true"
            android:text="@string/home"
            />
        <RadioButton
            android:id="@+id/qipeishang"
            style="@style/main_radio"
            android:drawableTop="@drawable/qipeishang_selector"
            android:textColor="@drawable/menu_sel"
            android:text="@string/qipeishang"
            />
        <RadioButton
            style="@style/main_radio"
            />
        <RadioButton
            android:id="@+id/luntan"
            style="@style/main_radio"
            android:textColor="@drawable/menu_sel"
            android:drawableTop="@drawable/luntan_selector"
            android:text="@string/luntan"
            />
        <RadioButton
            android:id="@+id/mine"
            android:textColor="@drawable/menu_sel"
            android:drawableTop="@drawable/mine_selector"
            style="@style/main_radio"
            android:text="@string/mine"
            />
    </RadioGroup>
    <RelativeLayout
        android:id="@+id/jijian"
        android:layout_width="@dimen/size_60dp"
        android:layout_height="@dimen/size_60dp"
        android:background="@mipmap/ic_bg_sending"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_home_bar_quicksending"
            android:drawablePadding="@dimen/size_3dp"
            android:text="@string/jijian"
            android:textSize="@dimen/size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</RelativeLayout>