<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mine.ui.SettingActivity"
    android:background="@color/background"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/include"
        layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/include"
        android:layout_marginTop="@dimen/size_20dp"
        >
        <RelativeLayout
            android:id="@+id/layout_tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_15dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab1"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_1dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab3"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_tab6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_1dp"
            android:padding="@dimen/size_15dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab6"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_tab7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_1dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab7"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:text="安全退出"
        android:padding="@dimen/size_20dp"
        android:gravity="center"
        android:textSize="@dimen/size_16sp"
        android:textColor="@color/blue"
        />
</RelativeLayout>