<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_15dp"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/size_20dp"
            android:layout_height="@dimen/size_20dp"
            android:src="@mipmap/ic_back"
            />
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/size_16sp"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/size_30dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/size_50dp"
                android:layout_height="@dimen/size_50dp"
                android:src="@mipmap/logo"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:layout_marginLeft="@dimen/size_10dp"
                android:textSize="@dimen/size_28sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/phone_hint"
            android:textColor="@color/edit_text"
            android:singleLine="true"
            android:padding="@dimen/size_5dp"
            android:inputType="number"
            android:textSize="@dimen/size_14sp"
            android:drawablePadding="@dimen/size_10dp"
            android:drawableLeft="@mipmap/ic_setting_user"
            android:layout_marginTop="@dimen/size_50dp"
            android:maxLength="12"
            />
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line"
            android:layout_marginTop="@dimen/size_5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/img_eye"
                    android:layout_marginRight="@dimen/size_10dp"
                    android:background="@color/white"
                    android:hint="@string/pwd_hint"
                    android:padding="@dimen/size_5dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size_14sp"
                    android:textColor="@color/edit_text"
                    android:drawablePadding="@dimen/size_10dp"
                    android:drawableLeft="@mipmap/ic_setting_pwd_new"
                    android:inputType="textPassword"
                    />
                <ImageView
                    android:id="@+id/img_eye"
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/size_10dp"
                    android:src="@mipmap/ic_setting_invisible"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                >
                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/tv_code"
                    android:layout_marginRight="@dimen/size_10dp"
                    android:background="@color/white"
                    android:hint="@string/code_hint"
                    android:padding="@dimen/size_5dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size_14sp"
                    android:textColor="@color/edit_text"
                    android:drawablePadding="@dimen/size_10dp"
                    android:drawableLeft="@mipmap/ic_setting_pwd_new"
                    android:inputType="number"
                    />
                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_16sp"
                    android:text="@string/code"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/orange"
                    />
            </RelativeLayout>
            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/line"
                android:layout_marginTop="@dimen/size_5dp"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            >
            <TextView
                android:id="@+id/tv_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账号登录"
                />
            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:background="@drawable/login_btn"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:layout_marginBottom="@dimen/size_20dp"
        android:layout_above="@id/tv_other_login"
        android:textColor="@color/white"
        android:text="@string/login" />
    <TextView
        android:id="@+id/tv_other_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orther_login"
        android:textSize="@dimen/size_14sp"
        android:textColor="@color/light_black"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/img_weChat"
        android:layout_marginBottom="@dimen/size_10dp"
        />
    <ImageView
        android:id="@+id/img_weChat"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/layout_agreement"
        android:src="@mipmap/wechat"
        android:layout_marginBottom="@dimen/size_10dp"
        />
    <LinearLayout
        android:id="@+id/layout_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="@dimen/size_30dp"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement1"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement2"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/orange"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_dianhua"
                android:drawablePadding="@dimen/size_5dp"
                android:text="客服电话:"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/black"

                />
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4000292282"
                android:layout_marginLeft="@dimen/size_5dp"
                android:textSize="@dimen/size_12sp"
                android:textColor="@color/blue"
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>