<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_100dp"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/phone_hint"
            android:maxLength="11"
            android:textSize="@dimen/size_14sp"
            android:textColor="@color/edit_text"
            android:paddingTop="@dimen/size_10dp"
            android:paddingBottom="@dimen/size_10dp"
            android:singleLine="true"
            android:drawablePadding="@dimen/size_10dp"
            android:drawableLeft="@mipmap/ic_setting_user"
            android:inputType="phone"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/line_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:gravity="center"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/edit_text"
                android:hint="@string/code_hint"
                android:textSize="@dimen/size_14sp"
                android:paddingTop="@dimen/size_10dp"
                android:paddingBottom="@dimen/size_10dp"
                android:singleLine="true"
                android:drawablePadding="@dimen/size_10dp"
                android:drawableLeft="@mipmap/ic_setting_captcha"
                android:layout_toLeftOf="@id/tv_code"
                />
            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_16sp"
                android:text="@string/code"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/orange"
                />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/line_gray"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_3dp"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_toLeftOf="@id/img_eye1"
            android:layout_marginRight="@dimen/size_10dp"
            android:hint="@string/pwd_hint"
            android:maxLength="15"
            android:textColor="@color/edit_text"
            android:textSize="@dimen/size_14sp"
            android:paddingTop="@dimen/size_10dp"
            android:paddingBottom="@dimen/size_10dp"
            android:singleLine="true"
            android:drawablePadding="@dimen/size_10dp"
            android:drawableLeft="@mipmap/ic_setting_pwd_new"
            android:inputType="textPassword"
            />
        <ImageView
            android:id="@+id/img_eye1"
            android:layout_width="@dimen/size_20dp"
            android:layout_height="@dimen/size_20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_10dp"
            android:src="@mipmap/ic_setting_invisible"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/line_gray"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_3dp"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_14sp"
            android:paddingTop="@dimen/size_10dp"
            android:paddingBottom="@dimen/size_10dp"
            android:singleLine="true"
            android:textColor="@color/edit_text"
            android:drawablePadding="@dimen/size_10dp"
            android:drawableLeft="@mipmap/ic_setting_password_new2"
            android:background="@color/white"
            android:hint="@string/pwd_again_hint"
            android:maxLength="15"
            android:layout_toLeftOf="@id/img_eye2"
            android:layout_marginRight="@dimen/size_10dp"
            android:inputType="textPassword"
            />
        <ImageView
            android:id="@+id/img_eye2"
            android:layout_width="@dimen/size_20dp"
            android:layout_height="@dimen/size_20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_10dp"
            android:src="@mipmap/ic_setting_invisible"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/line_gray"
        />
    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:background="@drawable/login_btn"
        android:layout_marginTop="@dimen/size_100dp"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:textColor="@color/white"
        android:text="提交" />
</LinearLayout>